# solitaire

./: Cargo.toml  LICENSE
src/: card.rs  main.rs
src/card/: foundation.rs  piles.rs  stock.rs  systems.rs  waste.rs
